--- a/main.css
+++ b/main.css
@@ -21,7 +21,7 @@ header{
 	position: relative;
 }
 
-overlay{
+.overlay{
 	width: 100%;
 	height: 100vh;
 	background-color: rgba(0,0,0,.85); /* Black */
@@ -31,7 +31,7 @@ overlay{
 	transition: opacity 1s;
 }
 
-/* Hamberger Menu */
+/*!* Hamberger Menu *!*/
 
 .menu{
 	padding: 2rem 2.5rem;
@@ -136,7 +136,7 @@ nav ul{
 	margin-right: 0;
 }
 
-nav-link::after{
+.nav-link::after{
 	background-color: aliceblue;
 	content: attr(data-text);
 	position: absolute;
@@ -178,61 +178,61 @@ nav-link::after{
 	}
 }
 
-@media screen and (max-width: 768px){
-	.brand{
+@media screen and (max-width: 768px) {
+	.brand {
 		margin: 0 auto;
 		animation: initial;
 		border-radius: 100%;
 		width: 10rem;
-		height: 10 rem;
+		height: 10rem;
 		display: flex;
 		align-items: center;
 		justify-content: center;
 	}
-}
 
-header{
-	perspectivce: 75rem;
-	overflow: hidden;
-}
+	header {
+		perspectivce: 75rem;
+		overflow: hidden;
+	}
 
-nav{
-	position: absolute;
-	top: 0;
-	left: 0;
-	width: 30rem;
-	height: 100vh;
-	line-height: initial;
-	flex-direction: column;
-	box-shadow: none;
-	text-align: center;
-	transform: rotateY(180deg);
-	transform-origin: top left;
-	transition: transform 650ms cubic-bezier(0.55,0.55, 0.675,0.19);
-}
+	nav {
+		position: absolute;
+		top: 0;
+		left: 0;
+		width: 30rem;
+		height: 100vh;
+		line-height: initial;
+		flex-direction: column;
+		box-shadow: none;
+		text-align: center;
+		transform: rotateY(180deg);
+		transform-origin: top left;
+		transition: transform 650ms cubic-bezier(0.55, 0.55, 0.675, 0.19);
+	}
 
-nav ul{
-	flex-direction: column;
-	margin-top: -5rem;
-}
+	nav ul {
+		flex-direction: column;
+		margin-top: -5rem;
+	}
 
-.nav-item:nth-child(n){
-	animation: initial;
-}
+	.nav-item:nth-child(n) {
+		animation: initial;
+	}
 
-.nav-link{
-	margin: 2rem 0;
-}
+	.nav-link {
+		margin: 2rem 0;
+	}
 
-header.open nav{
-	transform: rotateY(0);
-}
+	header.open nav {
+		transform: rotateY(0);
+	}
 
-.menu{
-	display: block;
-}
+	.menu {
+		display: block;
+	}
 
-overlay.open{
-	opacity: 1;
-	transform: scaleX(1);
+	.overlay.open {
+		opacity: 1;
+		transform: scaleX(1);
+	}
 }
